add jwt verif
