# main.go
@@ -4,6 +4,7 @@ import (
 	"app-note-go/controllers"
 	_ "app-note-go/docs"
 	"app-note-go/initializer"
+	"app-note-go/middleware"
 
 	"github.com/gin-gonic/gin"
 	swaggerFiles "github.com/swaggo/files"
@@ -15,10 +16,13 @@ func init() {
 	initializer.ConnectDB()
 }
 
+// @securityDefinitions.apikey ApiKeyAuth
+// @in header
+// @name Authorization
 func main() {
 	router := gin.Default()
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
-	router.GET("/ping", controllers.Ping)
+	router.GET("/ping", middleware.VerifyToken, controllers.Ping)
 	router.POST("/users/register", controllers.CreateUser)
 	router.POST("/users/login", controllers.LoginUser)
 	router.Run()
